# rs-uttt

./: Cargo.toml  LICENSE.md  README.md  notes.md  run
doc/: TODO.md  bench-01.md  data-structure-sizes.md  example-overflow.md  game-size-in-bytes.md  lru_cache.md  next-actions.md  notes.md  optimizing.md  ordering.md  perf-02-2.md  performance.md  results.md  rust-conf-01.md  rust_notes.md  solving-the-game.md  talk-proposal.md
doc/performance/: perf-02-1.md
src/: accessors.rs  constants.rs  constructors.rs  conversions.rs  data.rs  examples.rs  lib.rs  logic.rs  main.rs  questions.md  random.rs  runners.rs  show.rs  tests.rs  utility.rs
src/accessors/: mod.rs
src/constructors/: mod.rs  tests.rs
src/intel/: mod.rs
src/learn/: mod.rs
src/logic/: mod.rs  tests.rs
src/random/: mod.rs
src/solver/: benchmarks.rs  device.rs  layer.rs  mod.rs  outcome.rs  policy.rs  solution.rs  solve.rs  stack.rs  tests.rs
src/solver/cache/: mod.rs
src/solver/db/: db.rs  mod.rs  pool.rs
src/solver/devices/: cpu.rs  hdd.rs  mod.rs  ram.rs  ssd.rs
src/solver/layers/: cpu_layer.rs  mod.rs  ssd_layer.rs
src/solver/policies/: cpu_policy.rs  mod.rs  ssd_policy.rs
src/solver/ram_cache/: mod.rs
src/solver/stacks/: cpu_stack.rs  mod.rs  ssd_cpu_stack.rs
src/tests/: arbitrary.rs  mod.rs  various.rs
