[package]
name = "uttt"
version = "0.1.0"
authors = ["David James <davidcjames+xpe@gmail.com>"]
repository = "https://github.com/bluemont/rs-uttt.git"
homepage = "https://github.com/bluemont/rs-uttt.git"

[dependencies]
lru-cache = "0.0.7"
postgres = "0.11.11"
r2d2 = "0.7.0"
r2d2_postgres = "0.10.1"
rand = "0.3"

[dev-dependencies]
quickcheck = "0.3.1"
