[package]
name = "uttt"
version = "0.1.0"
authors = ["David James <davidcjames+xpe@gmail.com>"]
repository = "https://github.com/bluemont/rs-uttt.git"
homepage = "https://github.com/bluemont/rs-uttt.git"

[dependencies]
lru-cache = "0.1.0"
postgres = "0.12.0"
rand = "0.3"

[dev-dependencies]
quickcheck = "0.3.1"
